# package information
[metadata]
name = cocotbext-jtag
version = attr: cocotbext.jtag.version.__version__
description = jtag modules for cocotb
keywords = jtag, cocotb
author = Dave Keeshan
author_email = dave.keeshan@daxzio.com
license = MIT
url = https://github.com/daxzio/cocotbext-jtag
project_urls =
    Bug Tracker = https://github.com/daxzio/cocotbext-jtag/issues
    Source Code = https://github.com/daxzio/cocotbext-jtag
download_url = https://github.com/daxzio/cocotbext-jtag/tarball/master
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Framework :: cocotb
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    cocotb
    cocotb-bus

[options.extras_require]
test =
    pytest

[options.packages.find]
include = cocotbext.*

# pytest configuration
[tool:pytest]
testpaths =
    tests
addopts =
    --import-mode importlib

# tox configuration
[tox:tox]
envlist = py38, py39, py310, py311, py312

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
setenv =
    COVERAGE=1

deps =
    pytest
    pytest-xdist
    cocotb-test
    coverage
    pytest-cov

commands =
    pytest --cov=cocotbext --cov=tests --cov-branch -n auto
    bash -c 'find . -type f -name "\.coverage" | xargs coverage combine --append'

whitelist_externals =
    bash

# combine if paths are different
[coverage:paths]
source =
    cocotbext/
    /*/cocotbext

# do not report dependencies
[coverage:report]
omit = 
   .tox/*

# flake8 configuration
[flake8]
exclude = .git .tox *.egg build
max-line-length = 119
ignore =
    E123 # closing bracket does not match indentation of opening bracket's line
    E126 # continuation line over-indented for hanging indent
    E128 # continuation line under-indented for visual indent
    E221 # multiple spaces before operator
    E226 # missing whitespace around arithmetic operator
    E241 # multiple spaces after ','
    E262 # inline comment should start with '# '
    W503 # line break before binary operator
    W504 # line break after binary operator
per-file-ignores =
    __init__.py:F401
